--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="AJ International delivers premium orthopedic implants and surgical solutions with trusted quality, clinical reliability, and fast support across Pakistan."
+    />
+    <meta
+      name="keywords"
+      content="orthopedic implants, surgical implants, trauma implants, spinal implants, hip implants, knee implants, Pakistan"
+    />
+    <meta
+      name="robots"
+      content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"
+    />
+    <meta name="author" content="AJ International" />
+    <meta name="theme-color" content="#0f766e" />
+    <meta name="format-detection" content="telephone=no" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="AJ International" />
+    <meta property="og:title" content="AJ International | Orthopedic Implant Solutions" />
+    <meta
+      property="og:description"
+      content="Premium orthopedic implants and surgical solutions designed for quality, performance, and clinical confidence."
+    />
+    <meta property="og:image" content="/vite.svg" />
+    <meta property="og:locale" content="en_US" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="AJ International | Orthopedic Implant Solutions" />
+    <meta
+      name="twitter:description"
+      content="Premium orthopedic implants and surgical solutions designed for quality, performance, and clinical confidence."
+    />
+    <meta name="twitter:image" content="/vite.svg" />
+
     <title>AJ International | Orthopedic Implant Solutions</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="shortcut icon" href="./src/assets/aj-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/assets/aj-removebg-preview.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
